MDEV-7219 SQL_CALC_FOUND_ROWS yields wrong result

revert the code in filesort that conditionally updated 'found_rows',
rely on filesort_limit_arg instead.